feat: add viewerContext to get memo api
